exports[`Pagination allows toggling display of the first page button on and off 1`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination allows toggling display of the first page button on and off 2`] = `
<ul
  className="root">
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination allows toggling display of the last page button on and off 1`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
  <li
    className="item false false itemLast">
    <a
      aria-label="Last page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      »
    </a>
  </li>
</ul>
`;

exports[`Pagination allows toggling display of the last page button on and off 2`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination allows toggling display of the next page button on and off 1`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination allows toggling display of the next page button on and off 2`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
</ul>
`;

exports[`Pagination allows toggling display of the previous page button on and off 1`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination allows toggling display of the previous page button on and off 2`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination applies its default props 1`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination displays the correct padding of links 1`] = `
<ul
  className="root">
  <li
    className="item itemSelected itemDisabled itemFirst">
    <span
      className="itemLink">
      «
    </span>
  </li>
  <li
    className="item false itemDisabled itemPrevious">
    <span
      className="itemLink">
      ‹
    </span>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 1"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      1
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 2"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      2
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 3"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      3
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 4"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      4
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 5"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      5
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 6"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      6
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination displays the correct padding of links 2`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 6"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      6
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 11"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      11
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 12"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      12
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 13"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      13
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 14"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      14
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination displays the correct padding of links 3`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 14"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      14
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 15"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      15
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 16"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      16
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 17"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      17
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 18"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      18
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 19"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      19
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 20"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      20
    </a>
  </li>
  <li
    className="item false itemDisabled itemNext">
    <span
      className="itemLink">
      ›
    </span>
  </li>
</ul>
`;

exports[`Pagination displays the correct padding of links 4`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 1"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      1
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 2"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      2
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 3"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      3
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 4"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      4
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 5"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      5
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="Next page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
</ul>
`;

exports[`Pagination lets you customize its theme 1`] = `
<ul
  className="ROOT">
  <li
    className="ITEM FIRST">
    <a
      aria-label="First page"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="ITEM PREVIOUS">
    <a
      aria-label="Previous page"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="ITEM PAGE">
    <a
      aria-label="Page 2"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      2
    </a>
  </li>
  <li
    className="ITEM PAGE">
    <a
      aria-label="Page 3"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      3
    </a>
  </li>
  <li
    className="ITEM PAGE">
    <a
      aria-label="Page 4"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      4
    </a>
  </li>
  <li
    className="ITEM PAGE">
    <a
      aria-label="Page 5"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      5
    </a>
  </li>
  <li
    className="ITEM PAGE">
    <a
      aria-label="Page 6"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      6
    </a>
  </li>
  <li
    className="ITEM PAGE">
    <a
      aria-label="Page 7"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="ITEM PAGE">
    <a
      aria-label="Page 8"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="ITEM SELECTED PAGE">
    <a
      aria-label="Page 9"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="ITEM PAGE">
    <a
      aria-label="Page 10"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="ITEM NEXT">
    <a
      aria-label="Next page"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      ›
    </a>
  </li>
  <li
    className="ITEM LAST">
    <a
      aria-label="Last page"
      className="LINK"
      href="#"
      onClick={[Function anonymous]}>
      »
    </a>
  </li>
</ul>
`;

exports[`Pagination lets you customize its translations 1`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="ARIA_FIRST"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      FIRST
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="ARIA_PREVIOUS"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PREVIOUS
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="ARIA_PAGE_2"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PAGE_2
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="ARIA_PAGE_3"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PAGE_3
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="ARIA_PAGE_4"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PAGE_4
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="ARIA_PAGE_5"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PAGE_5
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="ARIA_PAGE_6"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PAGE_6
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="ARIA_PAGE_7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PAGE_7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="ARIA_PAGE_8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PAGE_8
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="ARIA_PAGE_9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PAGE_9
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="ARIA_PAGE_10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      PAGE_10
    </a>
  </li>
  <li
    className="item false false itemNext">
    <a
      aria-label="ARIA_NEXT"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      NEXT
    </a>
  </li>
  <li
    className="item false false itemLast">
    <a
      aria-label="ARIA_LAST"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      LAST
    </a>
  </li>
</ul>
`;

exports[`Pagination lets you force a maximum of pages 1`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 4"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      4
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 5"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      5
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 6"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      6
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 10"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      10
    </a>
  </li>
  <li
    className="item false itemDisabled itemNext">
    <span
      className="itemLink">
      ›
    </span>
  </li>
  <li
    className="item itemSelected itemDisabled itemLast">
    <span
      className="itemLink">
      »
    </span>
  </li>
</ul>
`;

exports[`Pagination lets you force a maximum of pages 2`] = `
<ul
  className="root">
  <li
    className="item false false itemFirst">
    <a
      aria-label="First page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      «
    </a>
  </li>
  <li
    className="item false false itemPrevious">
    <a
      aria-label="Previous page"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      ‹
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 3"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      3
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 4"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      4
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 5"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      5
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 6"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      6
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 7"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      7
    </a>
  </li>
  <li
    className="item false undefined itemPage">
    <a
      aria-label="Page 8"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      8
    </a>
  </li>
  <li
    className="item itemSelected undefined itemPage">
    <a
      aria-label="Page 9"
      className="itemLink"
      href="#"
      onClick={[Function anonymous]}>
      9
    </a>
  </li>
  <li
    className="item false itemDisabled itemNext">
    <span
      className="itemLink">
      ›
    </span>
  </li>
  <li
    className="item itemSelected itemDisabled itemLast">
    <span
      className="itemLink">
      »
    </span>
  </li>
</ul>
`;
